// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState Renders default empty state 1`] = `
<div
  className="ihrEmptyState"
  data-component-type="empty_state"
>
  <div
    className="ihrPrimaryMessage"
  >
    Oops... We couldn't find anything for this section.
  </div>
  <div
    className="ihrSecondaryMessage"
  >
    Please speak to your system admin or add information.
  </div>
</div>
`;

exports[`EmptyState Renders successfully with both primaryMessage, secondaryMessage and buttonComponent 1`] = `
<div
  className="ihrEmptyState"
  data-component-type="empty_state"
>
  <div
    className="ihrPrimaryMessage"
  >
    This is a primary message
  </div>
  <div
    className="ihrSecondaryMessage"
  >
    This is a secondary message
  </div>
  <LinkButton
    anchorComponentProps={
      Object {
        "useReactRouter": false,
      }
    }
    disabled={false}
    hasLegacyMargins={false}
    href="www.google.com.au"
    iconAlignment="left"
    size="small"
    type="neutral"
  >
    Add Address
  </LinkButton>
</div>
`;

exports[`EmptyState Renders successfully with null messages 1`] = `
<div
  className="ihrEmptyState"
  data-component-type="empty_state"
/>
`;

exports[`EmptyState Renders successfully with primaryMessage only 1`] = `
<div
  className="ihrEmptyState"
  data-component-type="empty_state"
>
  <div
    className="ihrPrimaryMessage"
  >
    This is a primary message
  </div>
  <div
    className="ihrSecondaryMessage"
  >
    Please speak to your system admin or add information.
  </div>
</div>
`;

exports[`EmptyState Renders successfully with secondaryMessage only 1`] = `
<div
  className="ihrEmptyState"
  data-component-type="empty_state"
>
  <div
    className="ihrPrimaryMessage"
  >
    Oops... We couldn't find anything for this section.
  </div>
  <div
    className="ihrSecondaryMessage"
  >
    This is a secondary message
  </div>
</div>
`;
